<?xml version="1.0" encoding="utf-8"?>

<!--
Jumat, 3 Juni 2022
10119226
Nur Fauzan Halim
IF6
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="18dp"
    tools:context=".ConfirmActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/img_back"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/title_confirm"
        android:textColor="@color/gray_800"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <LinearLayout
        android:id="@+id/group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_tes"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvJenisTes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_jenis_tes_option1"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_separator"
            app:srcCompat="@drawable/separator"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/group1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date_confirmed"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDateConfirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_date_confirmed"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_separator"
            app:srcCompat="@drawable/separator"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/group2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nik"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvNIK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_nik"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_separator"
            app:srcCompat="@drawable/separator"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/group3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_name"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_separator"
            app:srcCompat="@drawable/separator"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/group4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_date"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/group5"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_gender_option1"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group7"
        android:layout_width="379dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/group6"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_relation"
            android:textColor="@color/gray_800"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvRelation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/value_relation_option1"
            android:textColor="@color/gray_800"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_green"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnEdit"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:text="@string/btn_edit"
        android:textAllCaps="false"
        android:textColor="@color/gray_600"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
